--- a/style.css
+++ b/style.css
@@ -22,9 +22,14 @@ body {
 .header{
     display: flex;
     height: 56px;
-    padding: 7px 16px;
+    padding: 4px 16px;
     align-items: center;
     justify-content: space-between;
+    background-attachment: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100;
 }
 .whole_header{
     display: flex;
@@ -40,10 +45,12 @@ body {
     width: 108px;
     height: 16px;
     align-items: center;
+    padding:0px 12px;
 }
 
 .hamburger {
    padding: 8px;
+   height: 32px;
 }
 
 .search_icon{
@@ -65,4 +72,127 @@ button.join{
     letter-spacing: 0.14px;
     font-family: "regular";
     margin-left: 12px;
+}
+
+.search_bar{
+    display: flex;
+    box-sizing: border-box;
+    color: rgb(55, 58, 60);
+    font-family: OpenSans, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 12px 0px;
+    width: 100%;
+    align-items: center;
+}
+
+.button_search{
+    display: flex;
+    align-items: center;
+    background-color: rgb(0, 65, 158);
+    border-color: rgb(99, 99, 99);
+    border-style: solid;
+    border-image-width: 1px;
+    box-sizing: border-box;
+    color: rgba(0, 0, 0, 0.87);
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: normal;
+    line-height: 24px;
+    padding: 10px;
+    position: absolute;
+    text-align: left;
+}
+.search_button {
+    padding: 0px 10px 0px 10px;
+    width: 100%;
+    border: 1px solid black;
+
+}
+.search_button input {
+        appearance: auto;
+        background-attachment: scroll;
+        background-color: rgb(255, 255, 255);
+        background-size: auto;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius :0px;
+        box-sizing: border-box;
+        color: rgb(0, 0, 0);
+        cursor: text;
+        display: inline-block;
+        font-size: 16px;
+        font-weight: 400;
+        height: 38px;
+        line-height: 20px;
+        width: 100%; 
+        padding: 0px 10px 0px 36px;
+        border: none;
+}
+
+.browse {
+    background-color: rgb(218, 225, 237);
+    box-sizing: border-box;
+    color: rgb(55, 58, 60);
+    display: block;
+    line-height: 24px;
+    padding: 14px 16px;
+}
+
+.browse_arrow{
+   display: flex;
+   align-items: center;
+   margin-bottom: 16px;
+}
+
+.a_browse a {
+    text-decoration: none;
+    color: black;
+}
+
+.left_arrow{
+    margin: 0px 16px 0px 0px;
+}
+
+.course_div{
+    display: block;
+    font-size: 16px;
+    padding: 36px 16px;
+}
+
+.courses{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+
+}
+
+h2{
+    margin: 0;
+
+}
+.course_cataloge h2{
+    box-sizing: border-box;
+    color: rgb(15, 17, 20);
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: -0.06px;
+    line-height: 32px;
+    margin-bottom: 24px;
+    font-family: "pro";
+}
+
+.whole_filter{
+    padding: 8px 16px;
+    display: flex ;
+    align-items: center;
+    appearance: button;
+    background-color: rgb(255, 255, 255);
+    border-color: rgb(0, 86, 210);
+    border: 0.5px solid  rgb(0, 86, 210);
+    border-radius: 4px;
+    color:  rgb(0, 86, 210);
+    font-size: 14px;
+    gap: 8px;
+    font-weight: 500;
 }
