--- a/style.css
+++ b/style.css
@@ -396,7 +396,8 @@ button.join{
     font-size: 20px;
     line-height: 28px;
     letter-spacing: -0.1px;
-    padding-bottom: 24px;
+    padding: 24px 6px;
+    font-family: "project";
 }
 
 .excel{
@@ -412,4 +413,79 @@ button.join{
     text-decoration: none;
     color: rgb(0, 86, 210);
     font-family: "project";
+}
+
+.numbers{
+    box-sizing: border-box;
+    color: rgb(55, 58, 60);
+    display: flex;
+    flex-direction: row;
+    margin: 48px 0px;
+    justify-content: center;
+}
+
+.count{
+    box-sizing: border-box;
+    color: rgb(55, 58, 60);
+    align-items: center;
+    display: flex;
+    line-height: 24px;
+    font-size: 16px;
+}
+
+.count a{
+    align-items: center;
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-origin: padding-box;
+    border-color: rgb(0, 86, 210);
+    padding: 10px;
+    margin-inline: 6px;
+    color:  rgb(0, 86, 210);
+    
+}
+
+.button_one{
+    appearance: button;
+    align-items: center;
+    box-sizing: border-box;
+    border-radius: 2px;
+    display: flex;
+    background-color: rgb(232, 238, 247);
+    border-color: rgb(232, 238, 247);
+    height: 48px;
+    width: 36px;
+    margin: 0 2px;
+}
+
+.button_two{
+    appearance: button;
+    align-items: center;
+    box-sizing: border-box;
+    border-radius: 2px;
+    display: flex;
+    background-color: rgb(0, 86, 210);
+    border-color: rgb(0, 86, 210);
+    height: 48px;
+    width: 36px;
+    margin: 0 2px;
+}
+.summary{
+    margin: 48px opx;
+    box-sizing: border-box;
+    color: rgb(55, 58, 60);
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 1110px;
+    padding-inline: 20px;
+}
+
+.popular h2{
+    box-sizing: border-box;
+    color: rgb(15, 17, 20);
+    font-family: "project";
+    font-size: 20px;
+    margin-bottom: 24px;
 }
