--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ button.join{
     color: rgb(55, 58, 60);
     display: block;
     line-height: 24px;
-    padding: 14px 20px;
+    padding: 14px 20px 4px 20px;
     margin: -4px;
     font-family: "pro";
 }
