--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ button.join{
     line-height: 24px;
     max-width: 100%;
     font-size: 16px;
-
+    color: rgb(15, 17, 20);
 }
 
 .left_arrow{
@@ -469,7 +469,7 @@ button.join{
 } */
 
 .whole{
-    padding: 6px;
+    padding: 6px 0px;
 }
 
 .english_whole ul{
