--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ button.join{
 .project {
     display: flex;
     justify-content: space-between;
+    column-gap: 16px;
 }
 
 .net{
@@ -290,7 +291,7 @@ button.join{
     flex-direction: column;
     gap: 8px;
     flex: 1;
-    width: 79%;
+    width: 75%;
 }
 
 /* .business {
