--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ button.join{
     display: block;
     font-size: 16px;
     padding: 36px 16px;
+    padding-bottom: 0px;
 }
 
 .courses{
@@ -493,6 +494,7 @@ button.join{
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
+    /* margin-bottom: 1rem; */
 }
 
 .english_whole li{
@@ -579,6 +581,10 @@ button.join{
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
 }
 
 .star_two {
