--- a/style.css
+++ b/style.css
@@ -682,6 +682,11 @@ button.join{
 }
 
 .count a{
+    display: flex;
+    height: 16px;
+    width: 16px;
+    font-weight: 700;
+        
     align-items: center;
     background-attachment: scroll;
     background-clip: border-box;
@@ -694,6 +699,8 @@ button.join{
 }
 
 .button_one{
+    border: none;
+    justify-content: center;
     appearance: button;
     align-items: center;
     box-sizing: border-box;
@@ -707,6 +714,8 @@ button.join{
 }
 
 .button_two{
+    border: none;
+    justify-content: center;
     appearance: button;
     align-items: center;
     box-sizing: border-box;
@@ -714,6 +723,7 @@ button.join{
     display: flex;
     background-color: rgb(0, 86, 210);
     border-color: rgb(0, 86, 210);
+    color: #fff;
     height: 48px;
     width: 36px;
     margin: 0 2px;
