--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body,h2,p,h3,ul{
 
 
 .header{
+    position: sticky;
     display: flex;
     height: 56px;
     padding: 4px 16px;
@@ -43,13 +44,14 @@ body,h2,p,h3,ul{
     justify-content: space-between;
     background-attachment: fixed;
     top: 0;
-    right: 0;
-    left: 0;
+    
     width: 100;
     border-bottom: solid;
     border-bottom-color: rgb(232, 238, 247);
     border-bottom-width: 1px;
 }
+
+
 .whole_header{
     display: flex;
     align-items: center;
@@ -697,6 +699,9 @@ button.join{
     color:  rgb(0, 86, 210);
     
 }
+.ellipises{
+    color: #a7b4c9;
+}
 
 .button_one{
     border: none;
@@ -706,6 +711,7 @@ button.join{
     box-sizing: border-box;
     border-radius: 2px;
     display: flex;
+    padding-top: 2px;
     background-color: rgb(232, 238, 247);
     border-color: rgb(232, 238, 247);
     height: 48px;
@@ -729,7 +735,7 @@ button.join{
     margin: 0 2px;
 }
 .summary{
-    margin: 48px opx;
+    margin-bottom: 48px;
     box-sizing: border-box;
     color: rgb(55, 58, 60);
     display: flex;
@@ -737,7 +743,7 @@ button.join{
     font-size: 16px;
     line-height: 24px;
     max-width: 1110px;
-    padding-inline: 20px;
+    padding-inline: 30px;
     padding-bottom: 36px;
 }
 
@@ -747,6 +753,9 @@ button.join{
     font-family: "project";
     font-size: 20px;
     margin-bottom: 24px;
+    margin-top: 48px;
+    line-height: 28px;
+    letter-spacing: -0.1px;
 }
 
 .english{
@@ -793,14 +802,15 @@ button.join{
     color: rgb(55, 58, 60);
     flex-basis: 100%;
     flex-wrap: wrap;
-    margin-top: 105px;
-    margin-bottom: 106px;
+    margin-top: 60px;
+    margin-bottom: 61px;
     padding: 8px;
     margin-inline: -4px;
 }
 
 .online_courses{
     padding-bottom: 75px;
+    margin-top: 45px;
 }
 
 .online_courses h2{
@@ -1034,21 +1044,31 @@ a{
     .img img{
         display: inline;
     }
-    
+    .workplace{
+        height: 100%;
+    }
     .project{
         flex-direction: column-reverse;
+        height: 100%;
     }
-
-    .course_business img{
-        width: unset;
-        height: unset;
+    .net{
+        width: 100%;
+        justify-content: space-between;
+        flex: 1 1 0%;
+        gap: 16px;
     }
-
+.product_card{
+    align-items: end;
+}
+.common{
+    height: 100%;
+}
     .process{
         width: 100%;
-        display: flex;
         flex-wrap: wrap;
         box-sizing: border-box;
+        min-height: 200px;
+        height: 100%;
     }
     .english_whole ul{
         width: 100%;
@@ -1056,5 +1076,43 @@ a{
         flex-wrap: wrap;
         box-sizing: border-box;
     }
-
+    .english_whole li{
+        flex-grow: 0;
+        flex-basis: 50%;
+        max-width: 50%;
+        margin-bottom: 24px;
+    }
+    .common{
+        padding: 0 6px 24px ;
+    }
+    .course_business{
+        position: relative;
+    }
+    .free_button{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+    .course_business{
+        margin-bottom: 8px;
+        aspect-ratio: 16/9;
+        overflow: hidden;
+        width: 100%;
+    }
+    .course_business img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .excel{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing: border-box;
+    }
+    .excel a{
+        flex-grow: 0;
+        max-width: 50%;
+        flex-basis: 50%;
+    }
 }
