--- a/style.css
+++ b/style.css
@@ -1225,5 +1225,11 @@ a {
   .filter_button{
     display: none;
   }
-}
 
+  .english_whole li{
+    flex-grow: 0;
+    max-width: 33.333333%;
+    flex-basis: 33.333333%;
+  }
+  
+}
