--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ ul {
   padding: 0;
 }
 
-.header {
+.header_there {
   position: sticky;
   display: flex;
   height: 56px;
@@ -1100,7 +1100,7 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
-  .header{
+  .header_there{
     padding: 4px 48px 4px 49px;
   }
 
@@ -1277,11 +1277,83 @@ a {
 
 }
 @media screen and (min-width:1061px) {
-  .header{
+  .header_there{
     display: none;
   }
 
   .header_individual{
     display: inline;
   }
+
+  .for_individual{
+    box-sizing: border-box;
+    background-color: rgb(15, 17, 20);
+    color: rgb(55, 58, 60);
+    height: 40px;
+    line-height: 24px;
+    position: relative;
+  }
+
+  .universities{
+    box-sizing: border-box;
+    color: rgb(55, 58, 60);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-inline: 48px;
+  }
+
+  .banner ul{
+    box-sizing: border-box;
+    color: rgb(55, 58, 60);
+    display: flex;
+    align-items: row;
+  }
+
+  .banner a{
+    vertical-align: baseline;
+    display: inline;
+    margin: 0 8px;
+    padding: 0 8px;
+    line-height: 40px;
+    font-size: 16px;
+    color: #ffffff;
+    box-sizing: border-box;
+    /* border-bottom: 6px solid #ffffff; */
+    font-weight: 600;
+  }
+
+  .span_two{
+    box-sizing: border-box;
+    color: rgb(232, 238, 247);
+    font-size: 16px;
+    font-weight: 400;
+  }
+
+  .span_one{
+    box-sizing: border-box;
+    color: rgb(232, 238, 247);
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "pro";
+    letter-spacing: normal;
+  }
+  .coursera_img_two{
+    width: 127px;
+    height: 32px;
+  }
+  .container_login{
+    display: flex;
+  }
+  .exploew_free{
+    display: flex;
+  }
+  .form{
+    display: flex;
+  }
+  .course{
+    
+  }
 }
+
+
